--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "egg": "^2.2.1",
     "egg-cors": "^2.0.0",
+    "egg-jwt": "^3.0.0",
+    "egg-mongoose": "^2.2.1",
     "egg-passport": "^2.0.1",
     "egg-scripts": "^2.5.0",
     "mongoose": "^5.0.16"
